--- a/css/style.css
+++ b/css/style.css
@@ -2413,6 +2413,11 @@ ul.navbar-nav > li.header-get-a-quote:hover > a:after {
     float: left;
 }
 
+.ts-service-box-img img {
+    width: 50px;
+    height: 50px;
+}
+
 .ts-service-area h2 {
     margin-bottom: 50px;
 }
